Prevent buttons from wrapping

--- a/app/assets/stylesheets/actions.scss
+++ b/app/assets/stylesheets/actions.scss
@@ -13,5 +13,5 @@
 .two-column {
   display: flex;
   justify-content: space-between;
-  align-items: center
+  align-items: top;
 }
